# version1_WIFIandUI

./: .gitignore  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/MQTT/: mqtt.c  mqtt.h
main/WIFI/: wifi.c  wifi.h
